--- a/front/src/style.css
+++ b/front/src/style.css
@@ -1,4 +1,67 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: rgb(66, 65, 65);
   color: white;
+}
+
+.div-quantidade {
+  display: flex;
+  align-items: center;
+}
+
+.div-button {
+  display: flex;
+  flex-direction: column;
+}
+
+.buttonIncrements {
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: white;
+}
+
+.buttonIncrements:hover {
+  color: gray;
+}
+
+@keyframes slideUpper {
+  from {
+    transform: translate3d(0px, 20px, 0);
+  }
+
+  to {
+    transform: translate3d(0px, 0px, 0);
+  }
+}
+
+.Cart {
+  animation: slideUpper 1s 0s;
+
+  position: fixed;
+  display: block;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  text-align: left;
+  border: none;
+  background-color: rgb(99, 96, 96);
+  color: black;
+  font-weight: bold;
+  font-size: 32px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.Cart:hover {
+  background-color: rgb(61, 60, 60);
+}
+
+.link {
+  text-decoration: none;
 }
