--- a/front/src/style.css
+++ b/front/src/style.css
@@ -5,8 +5,13 @@
 }
 
 body {
-  background-color: rgb(66, 65, 65);
-  color: white;
+  background-color: #f3f3f3;
+  color: rgb(54, 53, 53);
+  font-family: "Roboto", sans-serif;
+}
+
+button {
+  cursor: pointer;
 }
 
 .div-quantidade {
@@ -23,7 +28,7 @@ body {
   background: none;
   border: none;
   cursor: pointer;
-  color: white;
+  color: black;
 }
 
 .buttonIncrements:hover {
@@ -41,7 +46,7 @@ body {
 }
 
 .Cart {
-  animation: slideUpper 1s 0s;
+  animation: slideUpper 0.5s 0s;
 
   position: fixed;
   display: block;
