--- a/front/src/style.css
+++ b/front/src/style.css
@@ -6,12 +6,13 @@
 
 body {
   background-color: #f3f3f3;
-  color: rgb(54, 53, 53);
+  color: rgb(53, 52, 52);
   font-family: "Roboto", sans-serif;
 }
 
 header {
-  background-color: black;
+  background-color: rgb(228, 28, 28);
+  width: 100%;
 }
 
 button {
