--- a/front/src/style.css
+++ b/front/src/style.css
@@ -4,19 +4,36 @@
   box-sizing: border-box;
 }
 
+html {
+  width: 100%;
+}
+
 body {
+  width: 100%;
   background-color: #f3f3f3;
   color: rgb(53, 52, 52);
   font-family: "Roboto", sans-serif;
 }
 
-header {
-  background-color: rgb(228, 28, 28);
-  width: 100%;
+ul li:last-of-type {
+  margin-bottom: 60px;
+}
+
+li {
+  text-decoration: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 button {
   cursor: pointer;
+}
+
+header {
+  background-image: linear-gradient(to right, rgb(173, 0, 0), rgb(255, 0, 0));
+  width: 100%;
 }
 
 .div-quantidade {
@@ -38,40 +55,4 @@ button {
 
 .buttonIncrements:hover {
   color: gray;
-}
-
-@keyframes slideUpper {
-  from {
-    transform: translate3d(0px, 20px, 0);
-  }
-
-  to {
-    transform: translate3d(0px, 0px, 0);
-  }
-}
-
-.Cart {
-  animation: slideUpper 0.5s 0s;
-
-  position: fixed;
-  display: block;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  text-align: left;
-  border: none;
-  background-color: rgb(99, 96, 96);
-  color: black;
-  font-weight: bold;
-  font-size: 32px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-
-.Cart:hover {
-  background-color: rgb(61, 60, 60);
-}
-
-.link {
-  text-decoration: none;
 }
