--- a/front/src/styles/card.css
+++ b/front/src/styles/card.css
@@ -23,22 +23,31 @@
   width: 150px;
 }
 
+.nameValueFood {
+  font-size: 18px;
+}
+
 .card button {
   margin: 16px;
   padding: 8px;
   width: 50%;
   max-width: 200px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 12, 12);
+  border: none;
   border-radius: 5px;
   color: white;
-  border: 1px solid black;
   transition: 0.3s;
 }
 
 .card button:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid black;
+  background-color: rgb(201, 10, 10);
+  color: rgb(204, 199, 199);
+}
+
+@media (max-width: 576px) {
+  .card button {
+    font-size: 16px;
+  }
 }
