finalizando a página de pedidos

--- a/front/src/styles/pages/menuPage.css
+++ b/front/src/styles/pages/menuPage.css
@@ -5,6 +5,10 @@
     background-size: 20%;
 */
 
+.menu-ul li:last-of-type {
+  margin-bottom: 60px;
+}
+
 .seeMenu {
   text-align: center;
   width: 80%;
