--- a/front/src/styles/pages/requestsPage.css
+++ b/front/src/styles/pages/requestsPage.css
@@ -1,9 +1,15 @@
+.li-requests:nth-child(1) {
+  margin-top: 50px;
+}
+
 .li-requests {
   list-style: none;
-  width: 50%;
-  margin: 50px auto;
+  width: 80%;
+  max-width: 1200px;
+  margin: auto;
   background: white;
   padding: 8px;
+  box-shadow: 0px 1px 3px black;
 }
 
 .li-requests img {
@@ -20,11 +26,20 @@
   align-items: center;
   justify-content: space-evenly;
   padding: 8px;
+  text-align: center;
 }
 
 .div-quantidade {
   display: flex;
   align-items: center;
+  justify-content: center;
+}
+
+.div-quantidade span {
+  border: 1px solid black;
+  padding: 4px;
+  margin: 0px 5px;
+  color: black;
 }
 
 .div-buttons {
@@ -57,4 +72,29 @@
 
 .btn-decrement:hover {
   color: rgb(182, 0, 0);
+}
+
+.valor {
+  display: inline-block;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.dinheiro {
+  font-weight: none;
+  font-size: 20px;
+}
+
+@media (max-width: 899px) {
+  .div-info {
+    display: block;
+  }
+
+  .li-requests img {
+    margin: 16px 0;
+  }
+
+  .valor {
+    margin: 8px auto 32px;
+  }
 }
