--- a/front/src/styles/pages/homePage.css
+++ b/front/src/styles/pages/homePage.css
@@ -46,6 +46,20 @@
   width: 100%;
 }
 
+.title-slide {
+  text-align: center;
+  width: 100%;
+  margin: 250px auto 100px;
+
+  color: rgb(255, 255, 255);
+
+  border-color: #f00 rgb(250, 250, 250) rgb(255, 0, 0) rgb(253, 253, 253);
+}
+
+.title-slide h1 {
+  background-color: red;
+}
+
 @media (max-width: 576px) {
   .div-sobre {
     width: 80%;
